--- a/examples/multiprog/Makefile
+++ b/examples/multiprog/Makefile
@@ -1,3 +1,4 @@
+CFLAGS := -std=c99
 
 all: fork_demo forkexec child
 
@@ -6,6 +7,8 @@ fork_demo: fork_demo.o
 forkexec: forkexec.o
 
 child: child.o
+
+memtest: memtest.o util.o
 
 clean:
 	-rm -f *.o
